--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,14 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_DEFAULT_REGION: "us-east-1"
+    AWS_ACCOUNT_ID: "220100568835"
+    IMAGE_REPO_NAME: "bar"
+    IMAGE_TAG: "latest"
+    REPOSITORY_URI: "220100568835.dkr.ecr.us-east-1.amazonaws.com/bar"
+    CONTAINER_NAME: "nginx"
+    
 phases:
   pre_build:
     commands:
