--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,5 +32,4 @@ phases:
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
-  files:
-    - imagedefinitions.json
+    files: imagedefinitions.json
